fixed carousel brightness to make the text more visible

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ nav{
   height: 800px;
   margin-top: 10px;
   margin-top: 0;
+  filter: brightness(50%);
 }
 .carousel{
   width: 70%;
